syntax = "proto3";

package smartagriculture;

import "google/protobuf/empty.proto";

message CropId {
  int32 id = 1;
}

message CropStatus {
  int32 id = 1;
  string status = 2;
  string growthStage = 3;
  repeated string pests = 4;
  float moistureLevel = 5;
}

message CropStatusList {
  repeated CropStatus cropStatusList = 1;
}

service CropMonitoringService {
  rpc getAllCropStatus(google.protobuf.Empty) returns (CropStatusList);
  rpc getCropStatusById(CropId) returns (CropStatus);
}
